Fix bullet point wrapping
`list-style-position: inside;` breaks more complex bullets that
contain p tags, which occur in some markdown scenarios.

We would end up with the number/bullet on a different line to the
content, because the p tag was a block element.

--- a/sass/innerContent.scss
+++ b/sass/innerContent.scss
@@ -43,7 +43,7 @@
   }
 
   ol {
-    list-style: decimal inside;
+    list-style: decimal;
     margin: 0.5em 0 2em;
     padding-left: 1em;
   }
@@ -61,7 +61,7 @@
   }
 
   ul {
-    list-style: disc inside;
+    list-style: disc;
     margin: 0.5em 0 2em;
     padding-left: 1em;
   }
